--- a/index.html
+++ b/index.html
@@ -1,1 +1,185 @@
-Hello World
+<!DOCTYPE HTML>
+<!--
+	Astral 2.5 by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Bildverarbeitung und Objekterkennung</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet" />
+		<script src="js/jquery.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel-noscript.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-desktop.css" />
+			<link rel="stylesheet" href="css/noscript.css" />
+		</noscript>
+		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
+	</head>
+	<body class="homepage">
+
+		<!-- Wrapper-->
+			<div id="wrapper">
+				
+				<!-- Nav -->
+					<nav id="nav">
+						<a href="#me" class="fa fa-home active"><span>Home</span></a>
+						<a href="#work" class="fa fa-folder"><span>Buchinhalte</span></a>
+						<a href="#email" class="fa fa-envelope"><span>Kontakt</span></a>
+					</nav>
+
+				<!-- Main -->
+					<div id="main">
+						
+						<!-- Me -->
+							<article id="me" class="panel">
+								<header>
+									<h1>Bildverarbeitung und<br> Objekterkennung</h1>
+									<span class="byline">Herbert Süße und Erik Rodner</span>
+                  <a href="http://www.springer.com"><img width=20% style="position:absolute;top:80%;" src="images/springer.png"></a>
+								</header>
+								<a href="#work" class="jumplink pic">
+									<span class="jumplink arrow fa fa-chevron-right"><span>See my work</span></span>
+									<img src="images/book.png" alt="Buch" />
+								</a>
+							</article>
+
+						<!-- Work --> 
+							<article id="work" class="panel">
+								<header>
+									<h2>Inhalte des Buches</h2>
+								</header>
+								<p>
+               Dieses Buch erläutert, wie Informationen automatisch aus Bildern extrahiert werden. Mit dieser
+               sehr aktuellen Frage beschäftigt sich das Buch mittels eines Streifzuges durch die Bildverarbeitung. 
+               Dabei werden sowohl die mathematischen Grundlagen vieler Verfahren der 2D- und 3D Bildanalyse 
+               vermittelt als auch deren Nutzen anhand von Problemstellungen aus vielen Bereichen (Medizin, 
+               industrielle Bildverarbeitung, Objekterkennung) erläutert. Das Buch eignet sich sowohl für Studierende 
+               der Informatik, Mathematik und Ingenieurwissenschaften als auch für Anwender aus der industriellen 
+               Bildverarbeitung.
+                </p>
+                <ol>
+                <li>2D Bildverarbeitung</li>
+                <li>3D Bildverarbeitung</li>
+                <li>Maschinelles Lernen, Merkmale und Objekterkennung</li>
+                <li>Elementare Mathematische Hilfsmittel</li>
+                </ol>
+
+              <p>
+              Das Buch wird unter der <strong>ISBN 978-3-8348-2605-3</strong> erhältlich sein.
+              </p>
+								<section class="is-gallery">
+                <!--
+									<div class="row half">
+										<div class="4u">
+											<a href="http://flypixel.com/knob/3495684098026313" class="image image-full"><img src="images/1.jpg" alt=""></a>
+										</div>
+										<div class="4u">
+											<a href="http://flypixel.com/contact-login-form/8829734266026310" class="image image-full"><img src="images/2.jpg" alt=""></a>
+										</div>
+										<div class="4u">
+											<a href="http://flypixel.com/wallpaper-pack/3755398966026313" class="image image-full"><img src="images/3.jpg" alt=""></a>
+										</div>
+									</div>
+									<div class="row half">
+										<div class="4u">
+											<a href="http://flypixel.com/44-shades-of-free-icons/8268508056006318" class="image image-full"><img src="images/4.jpg" alt=""></a>
+										</div>
+										<div class="4u">
+											<a href="http://flypixel.com/flip-clock/3655053956026317" class="image image-full"><img src="images/5.jpg" alt=""></a>
+										</div>
+										<div class="4u">
+											<a href="http://flypixel.com/dropdown/5290304620795313" class="image image-full"><img src="images/6.jpg" alt=""></a>
+										</div>
+									</div>
+									<div class="row half">
+										<div class="4u">
+											<a href="http://flypixel.com/pie-charts/1759361594616314" class="image image-full"><img src="images/7.jpg" alt=""></a>
+										</div>
+										<div class="4u">
+											<a href="http://flypixel.com/sliding-selector-bar/7042935581006315" class="image image-full"><img src="images/8.jpg" alt=""></a>
+										</div>
+										<div class="4u">
+											<a href="http://flypixel.com/dark-as-hell-ui/5418809286006313" class="image image-full"><img src="images/9.jpg" alt=""></a>
+										</div>
+									</div>
+									<div class="row half">
+										<div class="4u">
+											<a href="http://flypixel.com/cityscape/9803996277226316" class="image image-full"><img src="images/10.jpg" alt=""></a>
+										</div>
+										<div class="4u">
+											<a href="http://flypixel.com/dropdown/8259263378026313" class="image image-full"><img src="images/11.jpg" alt=""></a>
+										</div>
+										<div class="4u">
+											<a href="http://flypixel.com/wood-ui-kit/3574765984616310" class="image image-full"><img src="images/12.jpg" alt=""></a>
+										</div>
+									</div>
+									<div class="row half">
+										<div class="4u">
+											<a href="http://flypixel.com/upload-button/9737964647895311" class="image image-full"><img src="images/13.jpg" alt=""></a>
+										</div>
+										<div class="4u">
+											<a href="http://flypixel.com/collapsible-menunavigation/5743165610406316" class="image image-full"><img src="images/14.jpg" alt=""></a>
+										</div>
+										<div class="4u">
+											<a href="http://flypixel.com/3d-button/5506786525606318" class="image image-full"><img src="images/15.jpg" alt=""></a>
+										</div>
+									</div>
+								</section>
+                -->
+							</article>
+
+						<!-- Email -->
+							<article id="email" class="panel">
+								<header>
+									<h2>Feedback und Kontaktformular</h2>
+								</header>
+								<form action="#" method="post">
+									<div>
+										<div class="row half">
+											<div class="6u">
+												<input type="text" class="text" name="name" placeholder="Name" />
+											</div>
+											<div class="6u">
+												<input type="text" class="text" name="email" placeholder="Email" />
+											</div>
+										</div>
+										<div class="row half">
+											<div class="12u">
+												<input type="text" class="text" name="subject" placeholder="Betreff" />
+											</div>
+										</div>
+										<div class="row half">
+											<div class="12u">
+												<textarea name="message" placeholder="Nachricht"></textarea>
+											</div>
+										</div>
+										<div class="row">
+											<div class="12u">
+												<input type="submit" class="button" value="Absenden" />
+											</div>
+										</div>
+									</div>
+								</form>
+							</article>
+
+					</div>
+		
+				<!-- Footer -->
+					<div id="footer">
+						<ul class="links">
+							<li>&copy; Herbert Süße und Erik Rodner</li>
+							<li>Design : <a href="http://html5up.net/">HTML5 UP</a></li>
+						</ul>
+					</div>
+		
+			</div>
+
+	</body>
+</html>
