--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<nav id="nav">
 						<a href="#me" class="fa fa-home active"><span>Home</span></a>
 						<a href="#work" class="fa fa-folder"><span>Buchinhalte</span></a>
-						<a href="#email" class="fa fa-envelope"><span>Kontakt</span></a>
+						<a href="#autoren" class="fa fa-folder"><span>Autoren</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -45,7 +45,7 @@
                   <a href="http://www.springer.com"><img width=20% style="position:absolute;top:80%;" src="images/springer.png"></a>
 								</header>
 								<a href="#work" class="jumplink pic">
-									<span class="jumplink arrow fa fa-chevron-right"><span>See my work</span></span>
+									<span class="jumplink arrow fa fa-chevron-right"><span>Buch</span></span>
 									<img src="images/book.png" alt="Buch" />
 								</a>
 							</article>
@@ -55,7 +55,8 @@
 								<header>
 									<h2>Inhalte des Buches</h2>
 								</header>
-								<p>
+                
+                <p>
                Dieses Buch erläutert, wie Informationen automatisch aus Bildern extrahiert werden. Mit dieser
                sehr aktuellen Frage beschäftigt sich das Buch mittels eines Streifzuges durch die Bildverarbeitung. 
                Dabei werden sowohl die mathematischen Grundlagen vieler Verfahren der 2D- und 3D Bildanalyse 
@@ -134,43 +135,33 @@
 								</section>
                 -->
 							</article>
-
-						<!-- Email -->
-							<article id="email" class="panel">
+              
+              <article id="autoren" class="panel">
 								<header>
-									<h2>Feedback und Kontaktformular</h2>
+									<h2>Autoren</h2>
 								</header>
-								<form action="#" method="post">
-									<div>
-										<div class="row half">
-											<div class="6u">
-												<input type="text" class="text" name="name" placeholder="Name" />
-											</div>
-											<div class="6u">
-												<input type="text" class="text" name="email" placeholder="Email" />
-											</div>
-										</div>
-										<div class="row half">
-											<div class="12u">
-												<input type="text" class="text" name="subject" placeholder="Betreff" />
-											</div>
-										</div>
-										<div class="row half">
-											<div class="12u">
-												<textarea name="message" placeholder="Nachricht"></textarea>
-											</div>
-										</div>
-										<div class="row">
-											<div class="12u">
-												<input type="submit" class="button" value="Absenden" />
-											</div>
-										</div>
-									</div>
-								</form>
-							</article>
+                <table>
+                <tr>
+                <td>
+                <img width=90% src="images/herbert.jpg" />
+                <td style="vertical-align:middle; ">
+                <p>
+                <a href="http://www.inf-cv.uni-jena.de/suesse.html">Dr. Herbert Süße</a> ist schon seit Jahren in Forschung und Lehre tätig und beschäftigt sich mit 
+                Invarianten und deren Anwendung für die 2D Bildanalyse. Er ist außerdem für seine Arbeiten im Bereich
+                der Segmentierung bekannt.
+                <tr>
+                <td>
+                <img width=90% src="images/erik.jpg" />
+                <td style="vertical-align:middle; ">
+                <p>
+                <a href="https://sites.google.com/site/erikrodner/">Dr. Erik Rodner</a> arbeitet als wissenschaftlicher Mitarbeiter an der Universität Jena im Bereich der 
+                Objekterkennung und der Mustererkennung für visuelle Aufgabenstellungen.
+                </table>
+
+              </article>
 
 					</div>
-		
+
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="links">
