arrow, other symbols

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#me" class="fa fa-home active"><span>Home</span></a>
-						<a href="#work" class="fa fa-folder"><span>Buchinhalte</span></a>
-						<a href="#autoren" class="fa fa-folder"><span>Autoren</span></a>
+						<a href="#work" class="fa fa-book"><span>Buchinhalte</span></a>
+						<a href="#autoren" class="fa fa-pencil"><span>Autoren</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -55,7 +55,10 @@
 								<header>
 									<h2>Inhalte des Buches</h2>
 								</header>
-                
+               <a href="#autoren" class="jumplink pic">
+									<span class="jumplink arrow fa fa-chevron-right"><span>Autoren</span></span>
+								</a>
+
                 <p>
                Dieses Buch erläutert, wie Informationen automatisch aus Bildern extrahiert werden. Mit dieser
                sehr aktuellen Frage beschäftigt sich das Buch mittels eines Streifzuges durch die Bildverarbeitung. 
@@ -75,66 +78,8 @@
               <p>
               Das Buch wird unter der <strong>ISBN 978-3-8348-2605-3</strong> erhältlich sein.
               </p>
-								<section class="is-gallery">
-                <!--
-									<div class="row half">
-										<div class="4u">
-											<a href="http://flypixel.com/knob/3495684098026313" class="image image-full"><img src="images/1.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/contact-login-form/8829734266026310" class="image image-full"><img src="images/2.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/wallpaper-pack/3755398966026313" class="image image-full"><img src="images/3.jpg" alt=""></a>
-										</div>
-									</div>
-									<div class="row half">
-										<div class="4u">
-											<a href="http://flypixel.com/44-shades-of-free-icons/8268508056006318" class="image image-full"><img src="images/4.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/flip-clock/3655053956026317" class="image image-full"><img src="images/5.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/dropdown/5290304620795313" class="image image-full"><img src="images/6.jpg" alt=""></a>
-										</div>
-									</div>
-									<div class="row half">
-										<div class="4u">
-											<a href="http://flypixel.com/pie-charts/1759361594616314" class="image image-full"><img src="images/7.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/sliding-selector-bar/7042935581006315" class="image image-full"><img src="images/8.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/dark-as-hell-ui/5418809286006313" class="image image-full"><img src="images/9.jpg" alt=""></a>
-										</div>
-									</div>
-									<div class="row half">
-										<div class="4u">
-											<a href="http://flypixel.com/cityscape/9803996277226316" class="image image-full"><img src="images/10.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/dropdown/8259263378026313" class="image image-full"><img src="images/11.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/wood-ui-kit/3574765984616310" class="image image-full"><img src="images/12.jpg" alt=""></a>
-										</div>
-									</div>
-									<div class="row half">
-										<div class="4u">
-											<a href="http://flypixel.com/upload-button/9737964647895311" class="image image-full"><img src="images/13.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/collapsible-menunavigation/5743165610406316" class="image image-full"><img src="images/14.jpg" alt=""></a>
-										</div>
-										<div class="4u">
-											<a href="http://flypixel.com/3d-button/5506786525606318" class="image image-full"><img src="images/15.jpg" alt=""></a>
-										</div>
-									</div>
-								</section>
-                -->
-							</article>
+
+              </article>
               
               <article id="autoren" class="panel">
 								<header>
