--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 									<span class="jumplink arrow fa fa-chevron-right"><span>Autoren</span></span>
 								</a>
 
+				<table width=100%>
+                <tr>
+                <td style="vertical-align:middle; ">
                 <p>
                Dieses Buch erläutert, wie Informationen automatisch aus Bildern extrahiert werden. Mit dieser
                sehr aktuellen Frage beschäftigt sich das Buch mittels eines Streifzuges durch die Bildverarbeitung. 
@@ -78,6 +81,12 @@
               <p>
               Das Buch wird unter der <strong>ISBN 978-3-8348-2605-3</strong> erhältlich sein.
               </p>
+              </td>
+                <td style="vertical-align:middle; text-align:right; " width=300px>
+                <img width=250px src="images/book-cover.png" alt="Buchcover" />
+              </td>
+              </tr>
+              </table>
 
               </article>
               
