--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<article id="me" class="panel">
 								<header>
 									<h1>Bildverarbeitung und<br> Objekterkennung</h1>
-									<span class="byline">Herbert Süße und Erik Rodner</span>
+									<span class="byline">Herbert Süße und Erik Rodner<br /><br />Erscheinungsdatum: <b>14. Oktober 2014</b></span>
                   <a href="http://www.springer.com"><img width=20% style="position:absolute;top:80%;" src="images/springer.png"></a>
 								</header>
 								<a href="#work" class="jumplink pic">
