--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
 							<article id="me" class="panel">
 								<header>
 									<h1>Bildverarbeitung und<br> Objekterkennung</h1>
-									<span class="byline">Herbert Süße und Erik Rodner<br /><br />Erscheinungsdatum: <b>14. Oktober 2014</b></span>
+									<span class="byline">Herbert Süße und Erik Rodner</span>
                   <a href="http://www.springer.com"><img width=20% style="position:absolute;top:80%;" src="images/springer.png"></a>
+                  <a href="http://www.amazon.de/Bildverarbeitung-Objekterkennung-Computer-Industrie-Medizin/dp/3834826057/"><img width=20% style="position:absolute;top:85%;left:25%;" src="images/amazon.png"></a>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="jumplink arrow fa fa-chevron-right"><span>Buch</span></span>
@@ -96,20 +97,27 @@
 								</header>
                 <table>
                 <tr>
-                <td>
+                <td style="vertical-align:middle; " width=15%>
                 <img width=90% src="images/herbert.jpg" />
+                </td>
                 <td style="vertical-align:middle; ">
                 <p>
                 <a href="http://www.inf-cv.uni-jena.de/suesse.html">Dr. Herbert Süße</a> ist schon seit Jahren in Forschung und Lehre tätig und beschäftigt sich mit 
                 Invarianten und deren Anwendung für die 2D Bildanalyse. Er ist außerdem für seine Arbeiten im Bereich
                 der Segmentierung bekannt.
+                </p>
+                </td>
+                </tr>
                 <tr>
-                <td>
+                <td style="vertical-align:middle; ">
                 <img width=90% src="images/erik.jpg" />
+                </td>
                 <td style="vertical-align:middle; ">
                 <p>
-                <a href="https://sites.google.com/site/erikrodner/">Dr. Erik Rodner</a> arbeitet als wissenschaftlicher Mitarbeiter an der Universität Jena im Bereich der 
-                Objekterkennung und der Mustererkennung für visuelle Aufgabenstellungen.
+                Nach Forschungsaufenthalten in Mexiko und an der University of California Berkeley arbeitet <a href="https://sites.google.com/site/erikrodner/">Dr. Erik Rodner</a> als Forscher an der Universität Jena und leitet am Lehrstuhl für Digitale Bildverarbeitung den wissenschaftlichen Teilbereich Objekterkennung. Seine Forschungsinteressen konzentrieren sich auf Aspekte des lebenslangen Lernens von visuellen Konzepten sowie auf die Entwicklung von Deep Learning Verfahren für die Bildverarbeitung. 
+                </p>
+                </td>
+                </tr>
                 </table>
 
               </article>
