errata and google analytics

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
 			<link rel="stylesheet" href="css/noscript.css" />
 		</noscript>
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-55676473-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 	</head>
 	<body class="homepage">
 
@@ -30,7 +40,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#me" class="fa fa-home active"><span>Home</span></a>
-						<a href="#work" class="fa fa-book"><span>Buchinhalte</span></a>
+						<a href="#work" class="fa fa-book"><span>Buchinhalte und Errata</span></a>
 						<a href="#autoren" class="fa fa-pencil"><span>Autoren</span></a>
 					</nav>
 
@@ -80,7 +90,7 @@
                 </ol>
 
               <p>
-              Das Buch wird unter der <strong>ISBN 978-3-8348-2605-3</strong> erhältlich sein.
+              Das Buch ist unter <strong>ISBN 978-3-8348-2605-3</strong> erhältlich.
               </p>
               </td>
                 <td style="vertical-align:middle; text-align:right; " width=300px>
@@ -88,6 +98,18 @@
               </td>
               </tr>
               </table>
+
+              <header>
+              <h2>Errata</h2>
+              </header>
+
+              <p>
+              Anmerkungen und Fehlerkorrekturen der aktuellen Ausgabe finden Sie in folgendem Dokument: <a href="errata.pdf" target="new">Errata</a><br>
+              Sollten Sie Fragen oder beim Lesen Fehler gefunden haben, schreiben Sie doch einfach eine e-Mail an: 
+              <center>
+              <img width=200px src="images/feedbackmail.png">
+              </center>
+              </p>
 
               </article>
               
