shorter title and missing image

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#me" class="fa fa-home active"><span>Home</span></a>
-						<a href="#work" class="fa fa-book"><span>Buchinhalte und Errata</span></a>
+						<a href="#work" class="fa fa-book"><span>Buchinhalte</span></a>
 						<a href="#autoren" class="fa fa-pencil"><span>Autoren</span></a>
 					</nav>
 
